Revision history for Perl extension PPI

1.222
	Summary:
	- unit tests for many parts, both passing and TODO
	- many documentation fixes
	- add ->version method to PPI::Statement::Package (WOLFSAGE)
	- remove unused PPI::Document->new timeout feature
	- removal of Test::NoWarnings
	- less uses of List::MoreUtils in favor of List::Util
	- do not expect '.' in @INC (PLICEASE)

	Details:
	- Remove undocumented, non-working 'timeout' attribute to
	  Document->new, including HAVE_ALARM and
	  PPI::Exception::ParserTimeout.  (GitHub #140) (MOREGAN)
	- first cut of a travis configuration
	- do hex number matching with [[:xdigit:]]
	- some readability improvements on the code of HereDoc.pm

1.220 Tue 11 Nov 2014
	Summary:
	- incompatible behavior fixes on PPI::Statement::Sub->prototype
	- improved parsing of various syntax elements
	- code quality improvements
	- various small documentation fixes

	Details:
	- {} is now recognized as anonymous hash constructor instead of a code
	  block after these operators: &&= //= || && // ? :
	  (GitHub #36) (MOREGAN)
	- regex capture variables greater than $9 are now parsed completely,
	  instead of being parsed as single digit captures with numbers after
	  them (GitHub #38) (MOREGAN)
	- DESTROY and AUTOLOAD subs are now parsed even without the sub
	  keyword (GitHub #39) (MOREGAN)
	- PPI::Statement::Sub->prototype behavior now matches its
	  documentation, instead of returning the prototype string
	  unchanged and still including the parens (GitHub #56) (MOREGAN)
	- PPI::Statement::Sub->prototype now returns undef on subs without a
	  prototype, instead of returning an empty string
	  (GitHub #56) (MOREGAN)
	- list of keywords which are not parsed as packages when followed by
	  the Perl4 package separator ' has been increased
	  (GitHub #77) (MOREGAN)
	- application of a number of Perl::Critic policies and documentation
	  fixes (GitHub #53) (MOREGAN, MITHALDU)
	- automation of README.md generation for git (GitHub #86) (COWENS)